feat: commands changed using parse library